[package]
name = "evince-typst"
version = "0.1.0"
edition = "2021"
crate-type = ["rlib", "staticlib"]

[dependencies]
typst = { git = "https://github.com/typst/typst.git", tag = "v0.10.0" }
typst-render = { git = "https://github.com/typst/typst.git", tag = "v0.10.0" }
typst-pdf = { git = "https://github.com/typst/typst.git", tag = "v0.10.0" }
typst-svg = { git = "https://github.com/typst/typst.git", tag = "v0.10.0" }

# dependencies for typst-cli files
chrono = { version = "0.4.24", default-features = false, features = ["clock", "std"] }
clap = { version = "4.4", features = ["derive", "env"] }
codespan-reporting = "0.11"
comemo = "0.3.1"
dirs = "5"
ecow = { version = "0.2", features = ["serde"] }
env_proxy = "0.4"
flate2 = "1"
fontdb = { version = "0.15", default-features = false, features = ["memmap", "fontconfig"] }
notify = "6"
once_cell = "1"
pathdiff = "0.2"
rayon = "1.7.0"
rustls = "0.21" # in sync with ureq
rustls-pemfile = "1" # in sync with rustls
same-file = "1"
semver = "1"
tar = "0.4"
tracing = "0.1.37"
ureq = "2"
